@@ -1,4 +1,5 @@
 1.2.0 - TBD
+    * Pressing return in the scene name field now saves the scene
     * Added large flowers
     * Added new small flowers
     * Added new biome color data
